[gd_scene load_steps=11 format=3 uid="uid://f6q0gfxes2th"]

[ext_resource type="Script" path="res://scripts/gun/Grenade.gd" id="1_xe1je"]
[ext_resource type="Texture2D" uid="uid://d35ilc7f040vq" path="res://assets/sprites/throwables/grenade.png" id="2_lwvrr"]
[ext_resource type="PackedScene" uid="uid://d4ab403iyuxsk" path="res://components/scenes/Attackbox_Component.tscn" id="3_yckov"]
[ext_resource type="PackedScene" uid="uid://cn7f8fv4egtsq" path="res://components/scenes/Hurtbox_Component.tscn" id="4_hi8d2"]
[ext_resource type="Texture2D" uid="uid://bfkufta0nroot" path="res://assets/environment/light.png" id="5_vxnoc"]
[ext_resource type="AudioStream" uid="uid://1ebce8pnqd4u" path="res://assets/audio/weapons/throwables/explosion_sound_1.mp3" id="6_rqe7t"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rgd8h"]
radius = 25.0

[sub_resource type="Animation" id="Animation_5lo40"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteAnchor/Sprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Attackbox_Component:monitoring")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_7xbk6"]
resource_name = "explode"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1.46409),
"update": 0,
"values": [1.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteAnchor/Sprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Attackbox_Component:monitoring")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bdofy"]
_data = {
"RESET": SubResource("Animation_5lo40"),
"explode": SubResource("Animation_7xbk6")
}

[node name="Grenade" type="CharacterBody2D"]
collision_layer = 0
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_xe1je")

[node name="SpriteAnchor" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="SpriteAnchor"]
position = Vector2(1, -1)
texture = ExtResource("2_lwvrr")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(1, -1)
polygon = PackedVector2Array(-1, -2, 0, -2, 0, -1, 1, -1, 1, 0, 2, 0, 2, 2, 1, 2, 1, 3, 0, 3, 0, 4, -2, 4, -2, 3, -3, 3, -3, 2, -4, 2, -4, 0, -5, 0, -5, -1, -4, -1, -4, -2, -3, -2, -3, -3, -1, -3)

[node name="Explode_Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="Attackbox_Component" parent="." instance=ExtResource("3_yckov")]
collision_layer = 0
collision_mask = 6
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attackbox_Component"]
shape = SubResource("CircleShape2D_rgd8h")

[node name="Hurtbox_Component" parent="." instance=ExtResource("4_hi8d2")]
collision_layer = 0
collision_mask = 14

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hurtbox_Component"]
position = Vector2(1, -1)
polygon = PackedVector2Array(-1, -2, 0, -2, 0, -1, 1, -1, 1, 0, 2, 0, 2, 2, 1, 2, 1, 3, 0, 3, 0, 4, -2, 4, -2, 3, -3, 3, -3, 2, -4, 2, -4, 0, -5, 0, -5, -1, -4, -1, -4, -2, -3, -2, -3, -3, -1, -3)

[node name="PointLight2D" type="PointLight2D" parent="."]
enabled = false
color = Color(0.996078, 1, 0.65098, 1)
texture = ExtResource("5_vxnoc")
texture_scale = 0.4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bdofy")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_rqe7t")
volume_db = -20.8
attenuation = 1.46409
panning_strength = 0.58

[connection signal="timeout" from="Explode_Timer" to="." method="_on_explode_timer_timeout"]
[connection signal="body_entered" from="Attackbox_Component" to="." method="_on_attackbox_component_body_entered"]
[connection signal="body_exited" from="Attackbox_Component" to="." method="_on_attackbox_component_body_exited"]
[connection signal="body_entered" from="Hurtbox_Component" to="." method="_on_hurtbox_component_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
